--- a/SU2_CFD/src/meson.build
+++ b/SU2_CFD/src/meson.build
@@ -1,23 +1,14 @@
 su2_cfd_src = files(['integration_structure.cpp',
-                     'numerics_adjoint_mean.cpp',
                      'transport_model.cpp',
-                     'numerics_adjoint_turbulent.cpp',
                      'fluid_model_pvdw.cpp',
                      'integration_time.cpp',
                      'fluid_model_pig.cpp',
                      'iteration_structure.cpp',
                      'fluid_model_inc.cpp',
-                     'numerics_direct_turbulent.cpp',
-                     'numerics_direct_transition.cpp',
                      'definition_structure.cpp',
-                     'numerics_direct_mean_inc.cpp',
                      'fluid_model.cpp',
-                     'numerics_direct_mean.cpp',
-                     'numerics_direct_heat.cpp',
                      'fluid_model_ppr.cpp',
                      'python_wrapper_structure.cpp',
-                     'numerics_structure.cpp',
-                     'numerics_template.cpp',
                      'CMarkerProfileReaderFVM.cpp',
                      'SU2_CFD.cpp'])
 
@@ -102,14 +93,90 @@ su2_cfd_src += files(['solvers/CAdjEulerSolver.cpp',
                       'solvers/CTurbSASolver.cpp',
                       'solvers/CTurbSSTSolver.cpp'])
 
-su2_cfd_src += files(['numerics/elasticity/CFEAElasticity.cpp',
-                      'numerics/elasticity/CFEALinearElasticity.cpp',
+su2_cfd_src += files(['numerics/CNumerics.cpp',
+                      'numerics/template/CSource_Template.cpp',
+                      'numerics/template/CConvective_Template.cpp',
+                      'numerics/template/CViscous_Template.cpp',
+                      'numerics/transition/CAvgGradCorrected_TransLM.cpp',
+                      'numerics/transition/CUpwLin_TransLM.cpp',
+                      'numerics/transition/CAvgGrad_TransLM.cpp',
+                      'numerics/transition/CUpwSca_TransLM.cpp',
+                      'numerics/transition/CSourcePieceWise_TransLM.cpp',
+                      'numerics/heat/CCentSca_Heat.cpp',
+                      'numerics/heat/CUpwSca_Heat.cpp',
+                      'numerics/heat/CAvgGradCorrected_Heat.cpp',
+                      'numerics/heat/CAvgGrad_Heat.cpp',
+                      'numerics/flow/diffusion/CAvgGradInc_Flow.cpp',
+                      'numerics/flow/diffusion/CAvgGrad_Base.cpp',
+                      'numerics/flow/diffusion/CAvgGrad_Flow.cpp',
+                      'numerics/flow/diffusion/CGeneralAvgGrad_Flow.cpp',
+                      'numerics/flow/convection_upwind/CUpwCUSP_Flow.cpp',
+                      'numerics/flow/convection_upwind/CUpwMSW_Flow.cpp',
+                      'numerics/flow/convection_upwind/CUpwAUSMPLUS_SLAU_Base_Flow.cpp',
+                      'numerics/flow/convection_upwind/CUpwTurkel_Flow.cpp',
+                      'numerics/flow/convection_upwind/CUpwL2Roe_Flow.cpp',
+                      'numerics/flow/convection_upwind/CUpwFDSInc_Flow.cpp',
+                      'numerics/flow/convection_upwind/CUpwHLLC_Flow.cpp',
+                      'numerics/flow/convection_upwind/CUpwSLAU_Flow.cpp',
+                      'numerics/flow/convection_upwind/CUpwGeneralRoe_Flow.cpp',
+                      'numerics/flow/convection_upwind/CUpwAUSMPLUSUP_Flow.cpp',
+                      'numerics/flow/convection_upwind/CUpwGeneralHLLC_Flow.cpp',
+                      'numerics/flow/convection_upwind/CUpwRoe_Flow.cpp',
+                      'numerics/flow/convection_upwind/CUpwAUSMPLUSUP2_Flow.cpp',
+                      'numerics/flow/convection_upwind/CUpwRoeBase_Flow.cpp',
+                      'numerics/flow/convection_upwind/CUpwAUSM_Flow.cpp',
+                      'numerics/flow/convection_upwind/CUpwLMRoe_Flow.cpp',
+                      'numerics/flow/sources/CSourceWindGust.cpp',
+                      'numerics/flow/sources/CSourceRotatingFrame_Flow.cpp',
+                      'numerics/flow/sources/CSourceIncAxisymmetric_Flow.cpp',
+                      'numerics/flow/sources/CSourceIncBodyForce.cpp',
+                      'numerics/flow/sources/CSourceIncRotatingFrame_Flow.cpp',
+                      'numerics/flow/sources/CSourceGravity.cpp',
+                      'numerics/flow/sources/CSourceBodyForce.cpp',
+                      'numerics/flow/sources/CSourceAxisymmetric_Flow.cpp',
+                      'numerics/flow/sources/CSourceBoussinesq.cpp',
+                      'numerics/flow/convection_centered/CCentBase_Flow.cpp',
+                      'numerics/flow/convection_centered/CCentJSTInc_Flow.cpp',
+                      'numerics/flow/convection_centered/CCentJST_KE_Flow.cpp',
+                      'numerics/flow/convection_centered/CCentJST_Flow.cpp',
+                      'numerics/flow/convection_centered/CCentLaxInc_Flow.cpp',
+                      'numerics/flow/convection_centered/CCentLax_Flow.cpp',
                       'numerics/elasticity/CFEAMeshElasticity.cpp',
+                      'numerics/elasticity/CFEM_DielectricElastomer.cpp',
+                      'numerics/elasticity/CFEALinearElasticity.cpp',
+                      'numerics/elasticity/CFEAElasticity.cpp',
                       'numerics/elasticity/CFEANonlinearElasticity.cpp',
                       'numerics/elasticity/CFEM_NeoHookean_Comp.cpp',
                       'numerics/elasticity/CFEM_Knowles_NearInc.cpp',
                       'numerics/elasticity/CFEM_IdealDE.cpp',
-                      'numerics/elasticity/CFEM_DielectricElastomer.cpp'])
+                      'numerics/continuous_adjoint/CAvgGradCorrected_AdjFlow.cpp',
+                      'numerics/continuous_adjoint/CSourceRotatingFrame_AdjFlow.cpp',
+                      'numerics/continuous_adjoint/CUpwSca_AdjTurb.cpp',
+                      'numerics/continuous_adjoint/CAvgGradCorrected_AdjTurb.cpp',
+                      'numerics/continuous_adjoint/CSourceConservative_AdjFlow.cpp',
+                      'numerics/continuous_adjoint/CSourceAxisymmetric_AdjFlow.cpp',
+                      'numerics/continuous_adjoint/CSourceConservative_AdjTurb.cpp',
+                      'numerics/continuous_adjoint/CAvgGrad_AdjFlow.cpp',
+                      'numerics/continuous_adjoint/CUpwRoe_AdjFlow.cpp',
+                      'numerics/continuous_adjoint/CSourcePieceWise_AdjTurb.cpp',
+                      'numerics/continuous_adjoint/CCentLax_AdjFlow.cpp',
+                      'numerics/continuous_adjoint/CSourceViscous_AdjFlow.cpp',
+                      'numerics/continuous_adjoint/CAvgGrad_AdjTurb.cpp',
+                      'numerics/continuous_adjoint/CUpwLin_AdjTurb.cpp',
+                      'numerics/continuous_adjoint/CCentJST_AdjFlow.cpp',
+                      'numerics/turbulent/CUpwSca_TurbSST.cpp',
+                      'numerics/turbulent/CSourcePieceWise_TurbSA_E.cpp',
+                      'numerics/turbulent/CSourcePieceWise_TurbSA.cpp',
+                      'numerics/turbulent/CSourcePieceWise_TurbSA_Neg.cpp',
+                      'numerics/turbulent/CAvgGrad_TurbSA.cpp',
+                      'numerics/turbulent/CSourcePieceWise_TurbSA_E_COMP.cpp',
+                      'numerics/turbulent/CUpwScalar.cpp',
+                      'numerics/turbulent/CAvgGrad_TurbSA_Neg.cpp',
+                      'numerics/turbulent/CSourcePieceWise_TurbSST.cpp',
+                      'numerics/turbulent/CSourcePieceWise_TurbSA_COMP.cpp',
+                      'numerics/turbulent/CUpwSca_TurbSA.cpp',
+                      'numerics/turbulent/CAvgGrad_Scalar.cpp',
+                      'numerics/turbulent/CAvgGrad_TurbSST.cpp'])
 
 su2_cfd_src += files(['interfaces/CInterface.cpp',
                       'interfaces/cfd/CConservativeVarsInterface.cpp',
