fix build again

--- a/SU2_CFD/src/meson.build
+++ b/SU2_CFD/src/meson.build
@@ -94,28 +94,28 @@ su2_cfd_src += files(['solvers/CAdjEulerSolver.cpp',
                       'solvers/CTurbSSTSolver.cpp'])
 
 su2_cfd_src += files(['numerics/CNumerics.cpp',
-                      'numerics/template.hpp',
-                      'numerics/transition.hpp',
-                      'numerics/heat.hpp',
-                      'numerics/flow/convection/roe.hpp',
-                      'numerics/flow/convection/fds.hpp',
-                      'numerics/flow/convection/fvs.hpp',
-                      'numerics/flow/convection/cusp.hpp',
-                      'numerics/flow/convection/hllc.hpp',
-                      'numerics/flow/convection/ausm_slau.hpp',
-                      'numerics/flow/convection/centered.hpp',
-                      'numerics/flow/flow_diffusion.hpp',
-                      'numerics/flow/flow_sources.hpp',
-                      'numerics/continuous_adjoint/adj_convection.hpp',
-                      'numerics/continuous_adjoint/adj_diffusion.hpp',
-                      'numerics/continuous_adjoint/adj_sources.hpp',
-                      'numerics/turbulent/turb_convection.hpp',
-                      'numerics/turbulent/turb_diffusion.hpp',
-                      'numerics/turbulent/turb_sources.hpp',
-                      'numerics/elasticity/CFEAElasticity.hpp',
-                      'numerics/elasticity/CFEALinearElasticity.hpp',
-                      'numerics/elasticity/CFEANonlinearElasticity.hpp',
-                      'numerics/elasticity/nonlinear_models.hpp'])
+                      'numerics/template.cpp',
+                      'numerics/transition.cpp',
+                      'numerics/heat.cpp',
+                      'numerics/flow/convection/roe.cpp',
+                      'numerics/flow/convection/fds.cpp',
+                      'numerics/flow/convection/fvs.cpp',
+                      'numerics/flow/convection/cusp.cpp',
+                      'numerics/flow/convection/hllc.cpp',
+                      'numerics/flow/convection/ausm_slau.cpp',
+                      'numerics/flow/convection/centered.cpp',
+                      'numerics/flow/flow_diffusion.cpp',
+                      'numerics/flow/flow_sources.cpp',
+                      'numerics/continuous_adjoint/adj_convection.cpp',
+                      'numerics/continuous_adjoint/adj_diffusion.cpp',
+                      'numerics/continuous_adjoint/adj_sources.cpp',
+                      'numerics/turbulent/turb_convection.cpp',
+                      'numerics/turbulent/turb_diffusion.cpp',
+                      'numerics/turbulent/turb_sources.cpp',
+                      'numerics/elasticity/CFEAElasticity.cpp',
+                      'numerics/elasticity/CFEALinearElasticity.cpp',
+                      'numerics/elasticity/CFEANonlinearElasticity.cpp',
+                      'numerics/elasticity/nonlinear_models.cpp'])
 
 su2_cfd_src += files(['interfaces/CInterface.cpp',
                       'interfaces/cfd/CConservativeVarsInterface.cpp',
