--- a/Common/src/meson.build
+++ b/Common/src/meson.build
@@ -3,7 +3,7 @@ common_src =files(['geometry_structure_fem_part.cpp',
            'graph_coloring_structure.cpp',
            'fem_geometry_structure.cpp',
            'fem_integration_rules.cpp',
-           'config_structure.cpp',
+           'CConfig.cpp',
            'blas_structure.cpp',
            'ad_structure.cpp',
            'grid_movement_structure.cpp',
