Increasing Reynolds number (by higher density) in unsteady CHT test case for better unsteady effects.

--- a/TestCases/coupled_cht/incomp_2d_unsteady/cht_2d_3cylinders.cfg
+++ b/TestCases/coupled_cht/incomp_2d_unsteady/cht_2d_3cylinders.cfg
@@ -43,7 +43,7 @@ MAX_TIME= 100.0
 TIME_ITER= 2000
 %
 % Number of total iterations
-OUTER_ITER = 100
+OUTER_ITER = 200
 %
 % Courant-Friedrichs-Lewy condition of the finest grid
 CFL_NUMBER= 50.0
@@ -55,7 +55,7 @@ MESH_FILENAME= mesh_cht_3cyl.su2
 MESH_FORMAT= SU2
 %
 %
-HISTORY_OUTPUT= (ITER, BGS_RES[0], BGS_RES[1], BGS_RES[2], BGS_RES[3], HEAT[0])
+HISTORY_OUTPUT= (ITER, BGS_RES[0], BGS_RES[1], BGS_RES[2], BGS_RES[3], HEAT[0], AERO_COEFF[0])
 %
 %
 OUTPUT_FILES=(RESTART, PARAVIEW_MULTIBLOCK)
