CInletInterpolation cleanly introduced

--- a/Common/src/toolboxes/meson.build
+++ b/Common/src/toolboxes/meson.build
@@ -1,4 +1,5 @@
 common_src += files(['CLinearPartitioner.cpp',
-                     'printing_toolbox.cpp'])
+                     'printing_toolbox.cpp',
+                     'CInletInterpolation.cpp'])
 
 subdir('MMS')
