--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -117,4 +117,4 @@ jobs:
       - name: Run Unit Tests
         uses: docker://su2code/test-su2:20191031
         with:
-          entrypoint: install/bin/${{testdriver}}
+          entrypoint: install/bin/${{matrix.testdriver}}
