this-> pointer and enums

--- a/Common/src/toolboxes/meson.build
+++ b/Common/src/toolboxes/meson.build
@@ -1,5 +1,5 @@
 common_src += files(['CLinearPartitioner.cpp',
                      'printing_toolbox.cpp',
-                     'CInletInterpolation.cpp'])
+                     'C1DInterpolation.cpp'])
 
 subdir('MMS')
