Adding error when using MULTIPHYSICS solver with parallel_computation.py script

--- a/TestCases/disc_adj_incomp_euler/naca0012/incomp_NACA0012_disc.cfg
+++ b/TestCases/disc_adj_incomp_euler/naca0012/incomp_NACA0012_disc.cfg
@@ -235,6 +235,8 @@ WRT_CON_FREQ= 1
 %
 % Screen output
 SCREEN_OUTPUT = (INNER_ITER, RMS_ADJ_PRESSURE, RMS_ADJ_VELOCITY-X, SENS_PRESS, SENS_AOA)
+%
+OUTPUT_FILES=(RESTART_ASCII)
 % --------------------- OPTIMAL SHAPE DESIGN DEFINITION -----------------------%
 %
 % List of design variables (Design variables are separated by semicolons)
