Added missing output fields

--- a/TestCases/cont_adj_rans/naca0012/turb_nasa.cfg
+++ b/TestCases/cont_adj_rans/naca0012/turb_nasa.cfg
@@ -338,5 +338,6 @@ WRT_CON_FREQ= 1
 %
 % Screen output
 SCREEN_OUTPUT= (INNER_ITER, RMS_ADJ_DENSITY, RMS_ADJ_ENERGY, SENS_GEO, SENS_AOA)
-
+%
+OUTPUT_FILES=(RESTART_ASCII)
 
