--- a/TestCases/cont_adj_rans/rae2822/turb_SA_RAE2822.cfg
+++ b/TestCases/cont_adj_rans/rae2822/turb_SA_RAE2822.cfg
@@ -252,7 +252,8 @@ WRT_CON_FREQ= 1
 %
 % Screen output
 SCREEN_OUTPUT= (INNER_ITER, RMS_ADJ_DENSITY, RMS_ADJ_ENERGY, SENS_GEO, SENS_AOA)
-
+%
+OUTPUT_FILES= (RESTART_ASCII)
 % ------------------------ GRID DEFORMATION PARAMETERS ------------------------%
 %
 % Kind of deformation (FFD_SETTING, HICKS_HENNE, PARABOLIC, NACA_4DIGITS, 
