--- a/TestCases/navierstokes/poiseuille/lam_poiseuille.cfg
+++ b/TestCases/navierstokes/poiseuille/lam_poiseuille.cfg
@@ -264,3 +264,5 @@ WRT_CON_FREQ= 1
 %
 % Screen output 
 SCREEN_OUTPUT=(INNER_ITER, RMS_DENSITY, RMS_ENERGY, LIFT, DRAG)
+%
+OUTPUT_FILES=(RESTART_ASCII)
