--- a/TestCases/cont_adj_euler/oneram6/inv_ONERAM6.cfg
+++ b/TestCases/cont_adj_euler/oneram6/inv_ONERAM6.cfg
@@ -270,7 +270,9 @@ WRT_SOL_FREQ= 100
 % Writing convergence history frequency
 WRT_CON_FREQ= 1
 % Screen output
-SCREEN_OUTPUT = (INNER_ITER, RMS_ADJ_DENSITY, RMS_ADJ_ENERGY, SENS_GEO, SENS_AOA) 
+SCREEN_OUTPUT = (INNER_ITER, RMS_ADJ_DENSITY, RMS_ADJ_ENERGY, SENS_GEO, SENS_AOA)
+%
+OUTPUT_FILES=(RESTART_ASCII)
 % ----------------------- DESIGN VARIABLE PARAMETERS --------------------------%
 %
 % Kind of deformation (TRANSLATION, ROTATION, SCALE,
