--- a/TestCases/cont_adj_euler/wedge/inv_wedge_ROE.cfg
+++ b/TestCases/cont_adj_euler/wedge/inv_wedge_ROE.cfg
@@ -263,7 +263,8 @@ WRT_SOL_FREQ= 250
 WRT_CON_FREQ= 1
 % Screen output
 SCREEN_OUTPUT = (INNER_ITER, RMS_ADJ_DENSITY, RMS_ADJ_ENERGY, SENS_GEO, SENS_AOA) 
-
+%
+OUTPUT_FILES=(RESTART_ASCII)
 % -------------------- FREE-FORM DEFORMATION PARAMETERS -----------------------%
 %
 % Tolerance of the Free-Form Deformation point inversion
