--- a/TestCases/cont_adj_navierstokes/cylinder/lam_cylinder.cfg
+++ b/TestCases/cont_adj_navierstokes/cylinder/lam_cylinder.cfg
@@ -281,7 +281,8 @@ WRT_CON_FREQ= 1
 % 
 % Screen output
 SCREEN_OUTPUT= (INNER_ITER, RMS_ADJ_DENSITY, RMS_ADJ_ENERGY, SENS_GEO, SENS_AOA)
-
+%
+OUTPUT_FILES=(RESTART_ASCII)
 % --------------------- OPTIMAL SHAPE DESIGN DEFINITION -----------------------%
 %
 % Available flow based objective functions or constraint functions
