--- a/TestCases/cont_adj_navierstokes/naca0012_sub/lam_NACA0012.cfg
+++ b/TestCases/cont_adj_navierstokes/naca0012_sub/lam_NACA0012.cfg
@@ -265,7 +265,8 @@ WRT_SOL_FREQ= 5000
 WRT_CON_FREQ= 1
 % Screen output
 SCREEN_OUTPUT= (INNER_ITER, RMS_ADJ_DENSITY, RMS_ADJ_ENERGY, SENS_GEO, SENS_AOA)
-
+%
+OUTPUT_FILES= (RESTART_ASCII)
 % --------------------- OPTIMAL SHAPE DESIGN DEFINITION -----------------------%
 %
 % Available flow based objective functions or constraint functions
