--- a/TestCases/cont_adj_navierstokes/naca0012_trans/lam_NACA0012.cfg
+++ b/TestCases/cont_adj_navierstokes/naca0012_trans/lam_NACA0012.cfg
@@ -276,7 +276,8 @@ WRT_SOL_FREQ= 10000
 WRT_CON_FREQ= 5
 % Screen output
 SCREEN_OUTPUT= (INNER_ITER, RMS_ADJ_DENSITY, RMS_ADJ_ENERGY, SENS_GEO, SENS_AOA)
-
+%
+OUTPUT_FILES=(RESTART_ASCII)
 % --------------------- OPTIMAL SHAPE DESIGN DEFINITION -----------------------%
 %
 % Available flow based objective functions or constraint functions
