--- a/TestCases/euler/oneram6/inv_ONERAM6.cfg
+++ b/TestCases/euler/oneram6/inv_ONERAM6.cfg
@@ -275,7 +275,8 @@ WRT_CON_FREQ= 1
 %
 % Screen output fields
 SCREEN_OUTPUT = (INNER_ITER, RMS_DENSITY, RMS_ENERGY, LIFT, DRAG)
-
+%
+OUTPUT_FILES= (RESTART_ASCII)
 % ----------------------- DESIGN VARIABLE PARAMETERS --------------------------%
 %
 % Kind of deformation (TRANSLATION, ROTATION, SCALE,
