--- a/TestCases/cont_adj_euler/naca0012/inv_NACA0012_discadj.cfg
+++ b/TestCases/cont_adj_euler/naca0012/inv_NACA0012_discadj.cfg
@@ -268,6 +268,9 @@ WRT_CON_FREQ= 1
 %
 % Screen output
 SCREEN_OUTPUT= (INNER_ITER, RMS_ADJ_DENSITY, RMS_ADJ_ENERGY, SENS_PRESS, SENS_AOA)
+%
+OUTPUT_FILES=(RESTART_ASCII)
+%
 % --------------------- OPTIMAL SHAPE DESIGN DEFINITION -----------------------%
 %
 % Available flow based objective functions or constraint functions
