Further missing OUTPUT_FILES

--- a/TestCases/aeroelastic/aeroelastic_NACA64A010.cfg
+++ b/TestCases/aeroelastic/aeroelastic_NACA64A010.cfg
@@ -319,3 +319,6 @@ WRT_CON_FREQ_DUALTIME= 1
 %
 % Screen output
 SCREEN_OUTPUT= (TIME_ITER, INNER_ITER, RMS_DENSITY, RMS_ENERGY, LIFT, DRAG_ON_SURFACE, PLUNGE, PITCH) 
+%
+OUTPUT_FILES= (RESTART_ASCII)
+
