--- a/TestCases/unsteady/square_cylinder/turb_square.cfg
+++ b/TestCases/unsteady/square_cylinder/turb_square.cfg
@@ -272,3 +272,5 @@ WRT_CON_FREQ_DUALTIME= 1
 % 
 % Screen output 
 SCREEN_OUTPUT= (TIME_ITER, INNER_ITER, RMS_DENSITY, RMS_TKE, RMS_DISSIPATION, LIFT, DRAG)
+%
+OUTPUT_FILES= (RESTART_ASCII)
