--- a/SU2_SOL/src/meson.build
+++ b/SU2_SOL/src/meson.build
@@ -6,7 +6,7 @@ if get_option('enable-normal')
                                         'CMarkerProfileReaderFVM.cpp',
                                         'output/COutput.cpp',
                                         'output/output_structure_legacy.cpp',
-					'output/tools/CWindowingTools.cpp',
+                                        'output/tools/CWindowingTools.cpp',
                                         'output/CBaselineOutput.cpp',
                                         'output/filewriter/CParallelDataSorter.cpp',
                                         'output/filewriter/CParallelFileWriter.cpp',
@@ -26,8 +26,8 @@ if get_option('enable-normal')
                                         'output/filewriter/CParaviewXMLFileWriter.cpp',
                                         'output/filewriter/CParaviewVTMFileWriter.cpp',
                                         'variables/CBaselineVariable.cpp',
-                                        'variables/CVariable.cpp'])
-
+                                        'variables/CVariable.cpp',
+                                        'limiters/CLimiterDetails.cpp'])
 
   su2_sol = executable('SU2_SOL',
                       su2_sol_src, 
