changing the way catalytic/noncatalytic walls are treated

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -827,6 +827,10 @@ GILES_EXTRA_RELAXFACTOR= ( 0.05, 0.05)
 %
 % YES Non reflectivity activated, NO the Giles BC behaves as a normal 1D characteristic-based BC
 SPATIAL_FOURIER= NO
+%
+% Catalytic wall marker(s) (NONE = no marker)
+% Format: ( marker name, ... )
+CATALYTIC_WALL= ( NONE )
 
 % ------------------------ SURFACES IDENTIFICATION ----------------------------%
 %
