--- a/SU2_CFD/src/meson.build
+++ b/SU2_CFD/src/meson.build
@@ -119,6 +119,7 @@ su2_cfd_src += files(['numerics/CNumerics.cpp',
                       'numerics/flow/convection/centered.cpp',
                       'numerics/flow/flow_diffusion.cpp',
                       'numerics/flow/flow_sources.cpp',
+                      'numerics/NEMO/CNEMONumerics.cpp',
                       'numerics/NEMO/convection/lax.cpp',
                       'numerics/NEMO/convection/roe.cpp',
                       'numerics/NEMO/convection/ausm.cpp',
