Add test case config file.

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -816,7 +816,7 @@ SPATIAL_FOURIER= NO
 % The equivalent sand grain roughness height (k_s) on each of the wall. This must be in m. 
 % This is a list of (string, double) each element corresponding to the MARKER defined in WALL_TYPE.
 %WALL_ROUGHNESS = (wall1, ks1, wall2, ks2)
-%WALL_ROUGHNESS = (wall1, ks1, wall2, 0.0) is also allowed
+%WALL_ROUGHNESS = (wall1, ks1, wall2, 0.0) %is also allowed
 % ------------------------ SURFACES IDENTIFICATION ----------------------------%
 %
 % Marker(s) of the surface in the surface flow solution file
