Cleanup unnessary regression files

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -244,7 +244,7 @@ INC_OUTLET_TYPE= PRESSURE_OUTLET
 INC_OUTLET_DAMPING= 0.1
 %
 % Epsilon^2 multipier in Beta calculation for incompressible preconditioner. Default= 4.1
-BETA_FACTOR= 4.1);
+BETA_FACTOR= 4.1
 % ----------------------------- SOLID ZONE HEAT VARIABLES-----------------------%
 %
 % Thermal conductivity used for heat equation
