--- a/config_template.cfg
+++ b/config_template.cfg
@@ -12,7 +12,8 @@
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 %
 % Solver type (EULER, NAVIER_STOKES, RANS,
-%                               INC_EULER, INC_NAVIER_STOKES, INC_RANS
+%                               INC_EULER, INC_NAVIER_STOKES, INC_RANS,
+                                NEMO_EULER, NEMO_NAVIER_STOKES,
 %                               FEM_EULER, FEM_NAVIER_STOKES, FEM_RANS, FEM_LES,
 %                               HEAT_EQUATION_FVM, ELASTICITY)
 SOLVER= EULER
@@ -160,6 +161,9 @@ FREESTREAM_PRESSURE= 101325.0
 % Free-stream temperature (288.15 K, 518.67 R by default)
 FREESTREAM_TEMPERATURE= 288.15
 %
+% Free-stream VIBRATIONAL temperature (288.15 K, 518.67 R by default)
+FREESTREAM_TEMPERATURE_VE= 288.15
+%
 % Reynolds number (non-dimensional, based on the free-stream values)
 REYNOLDS_NUMBER= 6.5E6
 %
@@ -264,10 +268,10 @@ REF_AREA= 1.0
 % Aircraft semi-span (0 implies automatic calculation) (m or in)
 SEMI_SPAN= 0.0
 
-% ---- IDEAL GAS, POLYTROPIC, VAN DER WAALS AND PENG ROBINSON CONSTANTS -------%
+% ---- NONEQUILIBRIUM GAS, IDEAL GAS, POLYTROPIC, VAN DER WAALS AND PENG ROBINSON CONSTANTS -------%
 %
 % Fluid model (STANDARD_AIR, IDEAL_GAS, VW_GAS, PR_GAS,
-%              CONSTANT_DENSITY, INC_IDEAL_GAS, INC_IDEAL_GAS_POLY)
+%              CONSTANT_DENSITY, INC_IDEAL_GAS, INC_IDEAL_GAS_POLY, MUTATIONPP, USER_DEFINED_NONEQ)
 FLUID_MODEL= STANDARD_AIR
 %
 % Ratio of specific heats (1.4 default and the value is hardcoded
@@ -301,7 +305,18 @@ MOLECULAR_WEIGHT= 28.96
 % Temperature polynomial coefficients (up to quartic) for specific heat Cp.
 % Format -> Cp(T) : b0 + b1*T + b2*T^2 + b3*T^3 + b4*T^4
 CP_POLYCOEFFS= (0.0, 0.0, 0.0, 0.0, 0.0)
-
+%
+% Nonequilibrium fluid options
+%
+% Gas model - mixture
+GAS_MODEL= AIR-5
+%
+% Initial gas composition in mass fractions
+GAS_COMPOSITION= (0.77, 0.23, 0.0, 0.0, 0.0)
+%
+% Freeze chemical reactions
+FROZEN_MIXTURE= NO
+%
 % --------------------------- VISCOSITY MODEL ---------------------------------%
 %
 % Viscosity model (SUTHERLAND, CONSTANT_VISCOSITY, POLYNOMIAL_VISCOSITY).
@@ -700,11 +715,12 @@ MARKER_INLET= ( NONE )
 % Inc. Mass Flow: ( outlet marker, mass flow target (kg/s), ... )
 MARKER_OUTLET= ( NONE )
 %
-% Actuator disk boundary type (VARIABLES_JUMP, BC_THRUST,
+% Actuator disk boundary type (VARIABLE_LOAD, VARIABLES_JUMP, BC_THRUST,
 %                              DRAG_MINUS_THRUST)
 ACTDISK_TYPE= VARIABLES_JUMP
 %
 % Actuator disk boundary marker(s) with the following formats (NONE = no marker)
+% Variable Load: (inlet face marker, outlet face marker, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
 % Variables Jump: ( inlet face marker, outlet face marker,
 %                   Takeoff pressure jump (psf), Takeoff temperature jump (R), Takeoff rev/min,
 %                   Cruise  pressure jump (psf), Cruise temperature jump (R), Cruise rev/min )
@@ -715,6 +731,9 @@ ACTDISK_TYPE= VARIABLES_JUMP
 %                Takeoff Drag-Thrust (lbs), 0.0, Takeoff rev/min,
 %                Cruise Drag-Thrust (lbs), 0.0, Cruise rev/min )
 MARKER_ACTDISK= ( NONE )
+%
+% Actuator disk data input file name
+ACTDISK_FILENAME= actuatordisk.dat
 %
 % Supersonic inlet boundary marker(s) (NONE = no marker)
 % Format: (inlet marker, temperature, static pressure, velocity_x,
@@ -808,6 +827,10 @@ GILES_EXTRA_RELAXFACTOR= ( 0.05, 0.05)
 %
 % YES Non reflectivity activated, NO the Giles BC behaves as a normal 1D characteristic-based BC
 SPATIAL_FOURIER= NO
+%
+% Catalytic wall marker(s) (NONE = no marker)
+% Format: ( marker name, ... )
+CATALYTIC_WALL= ( NONE )
 
 % ------------------------ SURFACES IDENTIFICATION ----------------------------%
 %
