Cleaning streamwise periodic contribution

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1451,7 +1451,8 @@ HISTORY_WRT_FREQ_TIME= 1
 %
 % Writing convergence history frequency
 WRT_CON_FREQ= 1
-% Writing convergence history frequency for the dual time
+%
+% Writing convergence history frequency for the dual time stepping
 WRT_CON_FREQ_DUALTIME= 10
 %
 % Writing frequency for volume/surface output
