--- a/TestCases/nonequilibrium/thermalbath/finitechemistry/thermalbath.cfg
+++ b/TestCases/nonequilibrium/thermalbath/finitechemistry/thermalbath.cfg
@@ -3,9 +3,9 @@
 % SU2 configuration file                                                       %
 % Case description: 2D 5x5 Sqaure Test Case                                    %
 %                                                                              %
-% Author: Walter Maier                           	                       %
+% Author: C. Garbacz                         	                       %
 % Date: 2019.04.10                                                             %
-% File Version 6.2.0 "Falcon"                                                  %
+% File Version 7.0.6 "Falcon"                                                  %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
