regression test headers - update

--- a/TestCases/nonequilibrium/viscwedge/viscwedge.cfg
+++ b/TestCases/nonequilibrium/viscwedge/viscwedge.cfg
@@ -1,11 +1,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: Supersonic flow over a wedge in a channel (regression)     %
-% Author: Thomas D. Economon                                                   %
-% Institution: Stanford University                                             %
+% Case description: Mach 5 viscous flow over a 10deg wedge                     %
+% Author: C. Garbacz                                                           %
+% Institution: Strathclyde University                                          %
 % Date: 2012.10.07                                                             %
-% File Version 5.0.0 "Raven"                                                %
+% File Version 5.0.0 "Raven"                                                   %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
