--- a/TestCases/nonequilibrium/thermalbath/finitechemistry/thermalbath.cfg
+++ b/TestCases/nonequilibrium/thermalbath/finitechemistry/thermalbath.cfg
@@ -1,9 +1,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: 2D 5x5 Sqaure Test Case                                    %
+% Case description: 2D 5x5 Square Test Case representing a thermal bath        %
+%                    with thermal nonequilibrium and finite-rate chemistry     %
 %                                                                              %
-% Author: C. Garbacz                         	                       %
+% Author: C. Garbacz                         	                               %
+% Institution: Strathclyde University                                          %
 % Date: 2019.04.10                                                             %
 % File Version 7.0.6 "Falcon"                                                  %
 %                                                                              %
