--- a/TestCases/nonequilibrium/thermalbath/frozen/thermalbath_frozen.cfg
+++ b/TestCases/nonequilibrium/thermalbath/frozen/thermalbath_frozen.cfg
@@ -3,7 +3,8 @@
 % SU2 configuration file                                                       %
 % Case description: 2D 5x5 Sqaure Test Case                                    %
 %                                                                              %
-% Author: C. Garbacz                           	                       %
+% Author: C. Garbacz                           	                               % 
+% Institution: Strathclyde University                                          %
 % Date: 2019.04.10                                                             %
 % File Version 7.0.6 "Falcon"                                                  %
 %                                                                              %
