fix AD build, change defaults, update config_template

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1369,6 +1369,22 @@ EDGE_COLORING_GROUP_SIZE= 512
 % The default (0) means "same number of threads as for all else".
 LINEAR_SOLVER_PREC_THREADS= 0
 %
+% ----------------------- PARTITIONING OPTIONS (ParMETIS) ------------------------ %
+%
+% Load balancing tolerance, lower values will make ParMETIS work harder to evenly
+% distribute the work-estimate metric across all MPI ranks, at the expense of more
+% edge cuts (i.e. increased communication cost).
+PARMETIS_TOLERANCE= 0.02
+%
+% The work-estimate metric is a weighted function of the work-per-edge (e.g. spatial
+% discretization, linear system solution) and of the work-per-point (e.g. source terms,
+% temporal discretization) the former usually accounts for >90% of the total.
+% These weights are INTEGERS (for compatibility with ParMETIS) thus not [0, 1].
+% To balance memory usage (instead of computation) the point weight needs to be
+% increased (especially for explicit time integration methods).
+PARMETIS_EDGE_WEIGHT= 1
+PARMETIS_POINT_WEIGHT= 0
+%
 % ------------------------- SCREEN/HISTORY VOLUME OUTPUT --------------------------%
 %
 % Screen output fields (use 'SU2_CFD -d <config_file>' to view list of available fields)
