--- a/TestCases/rans/oneram6/turb_ONERAM6.cfg
+++ b/TestCases/rans/oneram6/turb_ONERAM6.cfg
@@ -234,6 +234,12 @@ CONV_CAUCHY_EPS= 1E-6
 
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
+% These settings are just to reproduce test results, comment them out
+% or delete them to use best practice values.
+PARMETIS_TOLERANCE= 0.05
+PARMETIS_EDGE_WEIGHT= 0
+PARMETIS_POINT_WEIGHT= 1
+%
 % Mesh input file
 MESH_FILENAME= mesh_ONERAM6_turb_hexa_43008.su2
 %
