--- a/TestCases/fea_topology/config.cfg
+++ b/TestCases/fea_topology/config.cfg
@@ -98,3 +98,9 @@ WRT_CON_FREQ= 1
 SOLUTION_ADJ_FILENAME= solution_adj.dat
 RESTART_ADJ_FILENAME= restart_adj.dat
 
+% These settings are just to reproduce test results, comment them out
+% or delete them to use best practice values.
+PARMETIS_TOLERANCE= 0.05
+PARMETIS_EDGE_WEIGHT= 0
+PARMETIS_POINT_WEIGHT= 1
+
